fixed file path issue with inserting the background image behind the banner element

--- a/SCSS/components/_banner.scss
+++ b/SCSS/components/_banner.scss
@@ -1,7 +1,7 @@
 .banner{
     height: 100%;
     min-width: 100%;
-    background-image: url("img/security.png");
+    background-image: url("../../img/security.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -31,7 +31,7 @@
              }
  
              & > .btn-banner{
-                 background-color: #4183d7;
+                 background-color: $security-color;
                  border-radius: 3px;
                  border: none;
                  padding: 15px 15px;
@@ -39,7 +39,7 @@
                  color:$white-text;
  
                  &:hover{
-                     background-color: #2a6ec6;
+                     background-color: $security-color-hovered;
                      cursor: pointer;
                  }
              }
