--- a/SCSS/main.css
+++ b/SCSS/main.css
@@ -474,7 +474,7 @@ body {
 .banner {
   height: 100%;
   min-width: 100%;
-  background-image: url("img/security.png");
+  background-image: url("../../img/security.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -510,7 +510,7 @@ body {
 }
 
 .banner > .banner-overlay > .banner-text > .btn-banner {
-  background-color: #4183d7;
+  background-color: #de093f;
   border-radius: 3px;
   border: none;
   padding: 15px 15px;
@@ -519,7 +519,7 @@ body {
 }
 
 .banner > .banner-overlay > .banner-text > .btn-banner:hover {
-  background-color: #2a6ec6;
+  background-color: #f62459;
   cursor: pointer;
 }
 
